8291651: CleanerTest.java fails with "Cleanable was cleaned" Add diagnostic output and checks, reduce cases to min